--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,13 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
   </head>
   
 
   <body ng-app="starter">
+
+    <script src="js/three.min.js"></script>
 
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
