Fixed rotation conversion
fixed rotation conversion problem by implementing the device
orientation controller library

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+
+    <script src="js/DeviceOrientationController.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
